# kernel-mind

./: .gitignore  README.md  kernelmind.entities.json  main.py  mongo_store.py  package.json  parse_js.js  pyproject.toml  requirements.txt  search.py  synthesis.py
embeddings/: cloud_backend.py  embedding_pipeline.py  factory.py  local_backend.py
ingestion/: crawler.py  downloader.py
kernelmind/: cli.py  main.py  search.py  synthesis.py
kernelmind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
kernelmind/embeddings/: base.py  embedding_pipeline.py  local_backend.py
kernelmind/ingestion/: crawler.py
kernelmind/parsers/: js_parser.py  json_parser.py  python_parser.py  yaml_parser.py
kernelmind/utils/: chunker.py  config_chunker.py  context_builder.py  mongo_store.py  rewriter.py
kernelmind/vector_store/: chroma_store.py
parsers/: python_parser.py
utils/: chunker.py  context_builder.py  rewriter.py
vector_store/: chroma_store.py
